# vulkan_basic_demo

./: .gitignore  CMakeLists.txt  Makefile  Shaders.mk  conanfile.txt
image/: cube_specular.tga
mesh/: plane.gltf  test.glb  test.gltf
shader/: color_pass_fragment.frag  color_pipeline_fragment.frag  color_pipeline_vertex.vert  fragment.frag  shadow_pass_vertex.vert  shadow_pipeline_vertex.vert  vertex.vert
src/: chrono.c  chrono.h  ds.c  ds.h  input.c  input.h  main.c  mesh.c  mesh.h  result.h  util.h  vk.h
src/link/: cgltf.c  stb_image.c
src/vk/: asset.c  asset.h  color_pipeline.c  color_pipeline.h  core.c  core.h  defaults.c  defaults.h  gfx_core.c  gfx_core.h  gfx_pipeline.c  gfx_pipeline.h  global.c  render.c  render.h  render_pass.c  render_pass.h  shadow_pipeline.c  shadow_pipeline.h
